@@ -1,3 +1,9 @@
+2005-08-01  Ross Burton  <ross@burtonini.com>
+
+	* data/sound-juicer.glade:
+	* src/sj-play.c:
+	Add Previous/Next track menu items.
+
 2005-08-01  Madhan Raj M  <madhanrm@gnome.org>
 
 	* data/sound-juicer.glade:
